--- a/WebNotas/appsettings.json
+++ b/WebNotas/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1; database=webnotascontext; uid=root; password=milton",
-    "RemoteConnection": "server=184.175.77.148; database=smartsof_aleramirez; uid=smartsof_aleramirez; password=aleramirezaleramirez"
+    "DefaultConnection": "server=127.0.0.1; database=webnotascontext; uid=root; password=",
+    "RemoteConnection": "server=184.175.77.148; database=smartsof_lautiacevedo; uid=smartsof_lautiacevedo; password=lautiacevedolautiacevedo"
   },
   "Logging": {
     "LogLevel": {
